--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "nodebucket",
+  "author": "Seth Kerrey",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,7 +12,6 @@
     "server": "nodemon ./server/index.js",
     "localhost": "ng build && node ./server/index.js"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
     "@angular/cdk": "^14.1.1",
@@ -23,10 +24,16 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.0",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
+    "morgan": "^1.10.0",
     "ngx-cookie-service": "^14.0.1",
     "rxjs": "~7.5.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
