--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.19",
     "typescript": "~4.7.2"
+  },
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.11.0"
   }
 }
